# async-pixiv

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml  release.yml
src/async_pixiv/: __init__.py  client.py  config  const.py  error.py  model.py  typedefs.py  warn.py
src/async_pixiv/client/: __init__.py  _client.py  _client.pyi  _net.py  _response.py  _section.py  _transport.py  config
src/async_pixiv/client/_section/: __init__.py  _base.py  _illust.py  _novel.py  _user.py
src/async_pixiv/client/api/: __init__.py  _abc.py  _abc.pyi  _api.py  _illust.py  _illust.pyi  _novel.py  _novel.pyi  _user.py  _user.pyi
src/async_pixiv/model/: __init__.py  _base.py  artwork.py  illust.py  model.py  novel.py  other.py  result.py  user.py
src/async_pixiv/model/other/: enums.py  image.py  result.py  tag.py
src/async_pixiv/utils/: bypass.py  const.py  context.py  decorator.py  dns.py  enums.py  func.py  magic.py  model.py  net.py  overwrite.py  rate_limiter.py  singleton.py  typed.py  typedefs.py
src/async_pixiv/utils/ffmpeg/: __init__.py  _ffmpeg.py  typing.py  utils.py
tests/: api_test.py
