[project]
name = "async-pixiv"
version = "0.3.10"
description = "Async Pixiv API for Python"
authors = [
    { name = "Arko", email = "arko.space.cc@gmail.com" },
]
dependencies = [
    "pydantic[email]<2.0.0,>=1.10.2",
    "aiohttp-socks<1.0.0,>=0.7.1",
    "arko-wrapper<1.0.0,>=0.2.4",
    "aiofiles<24.0.0, >=23.2.0",
    "httpx<0.27.0, >=0.26.0",
    "aiolimiter<2.0.0,>=1.0.0",
    "pyee<12.0.0,>=11.0.1",
]
requires-python = ">=3.8,<4.0"
readme = "README.md"
license = { text = "MIT" }
maintainers = [
    { name = "Karako", email = "karakohear@gmail.com" },
]
keywords = ["pixiv", "async", "pixiv-api"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/ArkoClub/async-pixiv"
repository = "https://github.com/ArkoClub/async-pixiv"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["src/async_pixiv", "LICENSE"]

[project.optional-dependencies]
regex = ["regex<2023.0.0,>=2022.9.13"]
ujson = ["ujson<6.0.0,>=5.5.0"]
extra = ["uvloop<1.0.0,>=0.16.0; sys_platform != \"win32\""]
playwright = ["playwright<2.0.0,>=1.41.0"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest<4.0,>=3.0",
]

[[tool.pdm.source]]
name = "official-pypi"
url = "https://pypi.python.org/simple"
verify_ssl = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"