[project]
name = "async-pixiv"
version = "1.0.0"
description = "Async Pixiv API for Python"
authors = [
    { name = "Arko", email = "arko.space.cc@gmail.com" },
]
dependencies = [
    "pydantic[email]<2.7.0,>=2.6.0",
    "arko-wrapper>=0.2.8",
    "aiofiles<24.0.0,>=23.2.1",
    "httpx<0.27.0,>=0.26.0",
    "aiohttp-socks>=0.8.4",
    "pyee<12.0.0,>=11.0.1",
    "msgspec<0.19.0,>=0.18.6",
    "aiolimiter<2.0.0,>=1.1.0",
    "requests<2.32.0,>=2.31.0",
    "orjson<3.10.0,>=3.9.13",
]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = { text = "MIT" }
maintainers = [
    { name = "Karako", email = "karakohear@gmail.com" },
]
keywords = ["pixiv", "async", "pixiv-api"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://github.com/ArkoClub/async-pixiv"
repository = "https://github.com/ArkoClub/async-pixiv"


[tool.pdm]
distribution = true
[[tool.pdm.source]]
name = "official-pypi"
url = "https://pypi.python.org/simple"
verify_ssl = true


[tool.pdm.build]
includes = ["src/async_pixiv", "LICENSE"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest<4.0,>=3.0",
    "black<25.0.0,>=24.2.0",
]

[project.optional-dependencies]
regex = ["regex<2024.0.0,>=2022.9.13"]
extra = ["uvloop<1.0.0,>=0.16.0; sys_platform != \"win32\""]
playwright = ["playwright<2.0.0,>=1.26.1"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"