[project]
name = "async-pixiv"
version = "1.0.0a1"
description = "Async Pixiv API for Python"
authors = [
    { name = "Arko", email = "arko.space.cc@gmail.com" },
]
dependencies = [
    "arko-wrapper>=0.4.1",
    "pydantic[email]>=2.5.3",
    "aiofiles>=24.1.0",
    "httpx>=0.27.0",
    "aiohttp-socks>=0.9.0",
    "pyee>=11.1.0",
    "msgspec>=0.18.0",
    "aiolimiter>=1.1.0",
    "requests>=2.32.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
maintainers = [
    { name = "Karako", email = "karakohear@gmail.com" },
]
keywords = ["pixiv", "async", "pixiv-api"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
regex = ["regex"]
extra = ["uvloop<1.0.0,>=0.16.0; sys_platform != \"win32\""]
playwright = [
    "playwright<2.0.0,>=1.26.1",
    "pyotp>=2.9.0",
    "playwright-stealth>=1.0.6",
    "distribute>=0.7.3",
]

[project.urls]
homepage = "https://github.com/ArkoClub/async-pixiv"
repository = "https://github.com/ArkoClub/async-pixiv"

[tool.pdm]
distribution = true

[[tool.pdm.source]]
name = "official-pypi"
url = "https://pypi.python.org/simple"
verify_ssl = true

[tool.pdm.build]
includes = ["src/async_pixiv", "LICENSE"]

[tool.pdm.dev-dependencies]
dev = [
    "pytest<9.0,>=8.0",
    "black",
    "pytest-asyncio<0.24.0,>=0.23.5",
    "pytest-env>=1.1.3",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.pytest.ini_options]
pythonpath = [
    "."
]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"